--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     
     <body>
         <!-- Partners-->
+        <!--Makenna's Work-->
         <div class = "container">
             <h5>Our Partners</h5>
                 <div class="row">
